finished clustering algorithm to get most interesting places