@@ -1,5 +1,6 @@
 package com.isep.dataengineservice.Config;
 
+import lombok.var;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -7,6 +8,8 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @EnableWebSecurity
@@ -15,15 +18,20 @@ import java.util.List;
 public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception{
+        List allowedMethods = new ArrayList<String>();
+        allowedMethods.add("GET");
+        allowedMethods.add("POST");
+        allowedMethods.add("PUT");
+
         http
                 .cors(
                         cors -> {
                             cors
                                     .configurationSource(request -> {
                                                 var corsConfiguration = new CorsConfiguration();
-                                                corsConfiguration.setAllowedOrigins(List.of("*"));
-                                                corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT"));
-                                                corsConfiguration.setAllowedHeaders(List.of("*"));
+                                                corsConfiguration.setAllowedOrigins(Collections.singletonList(("*")));
+                                                corsConfiguration.setAllowedMethods( allowedMethods );
+                                                corsConfiguration.setAllowedHeaders(Collections.singletonList(("*")));
                                                 return corsConfiguration;
                                             }
                                     );
